--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <body>
     <main>
-        <ol id="team-list">
+        <ul id="team-list">
 
-        </ol>
+        </ul>
     </main>
 
     <!-- js bootstrap -->
