--- a/index.html
+++ b/index.html
@@ -15,15 +15,29 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- my js -->
-    <script defer src="js/script.js"></script>
+    <!-- <script defer src="js/script.js"></script> -->
+    <script defer src="js/bonus2.js"></script>
 </head>
 
 <body>
     <main>
-        <ul id="team-list">
+        <!-- * da milestone 0 a bonus 1 -->
+        <!-- <ul id="team-list"></ul> -->
 
-        </ul>
-    </main>
+        <!-- * bonus 2 -->
+        <!-- titolo e breve descrizione -->
+        <section id="team">
+            <div class="container text-center">
+                <h2 class="section-title py-3">OUR TEAM</h2>
+                <p class="section-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil consequuntur impedit architecto! Quae accusamus repellat nulla, quod aliquam hic magnam vitae ab similique sed laudantium ipsa qui, tenetur dolorum nostrum.
+                </p>
+            </div>
+        </section>
+
+        <!-- immagine membri -->
+        <div id="team-container">
+        </div>
+        </main>
 
     <!-- js bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
